--- a/src/sass/_utilities.sass
+++ b/src/sass/_utilities.sass
@@ -44,6 +44,7 @@
     background-position: center center
     background-size: 40%
     border: none
+    cursor: pointer
 
 %buttons-carousel-desktop
     @media (min-width: 769px)
