--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -163,12 +163,10 @@ body
                 @include mobile
                     display: none
     .main-carousel-icon
-        @include mobile
-            font-size: .7rem
-        font-size: .6rem
         @include flex-center
         margin-bottom: 20px
         div
+            cursor: pointer
             @include mobile
                 margin: 0 10px
             width: 15px
