--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@
     background-position: center center;
     background-size: 40%;
     border: none;
+    cursor: pointer;
   }
   .main-carousel .slideshow .next {
     right: -22.5px;
@@ -34,6 +35,7 @@
     background-position: center center;
     background-size: 40%;
     border: none;
+    cursor: pointer;
   }
 }
 
@@ -273,18 +275,13 @@ body {
   }
 }
 .main-carousel .main-carousel-icon {
-  font-size: 0.6rem;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
 }
-@media (max-width: 480px) {
-  .main-carousel .main-carousel-icon {
-    font-size: 0.7rem;
-  }
-}
 .main-carousel .main-carousel-icon div {
+  cursor: pointer;
   width: 15px;
   height: 15px;
   border-radius: 50%;
